Add validate-doctor endpoint, swagger definitions, readme
