# src/api/auth.ts
@@ -6,7 +6,10 @@ export default (server: express.Application, authenticationModule: Authenticatio
     server.post("/auth/login", (request: Request, response: Response) => {
         return authenticationModule.login(request.body.username, request.body.password).then((result: any) => response.json(result))
     });
-    server.post("/auth/validate-token", (request: Request, response: Response) => {
-        return authenticationModule.validateToken(request.body.token).then((result: any) => response.json(result))
+    server.get("/auth/validate-token", (request: Request, response: Response) => {
+        return authenticationModule.validate(request.headers.authorization).then((result: boolean) => response.json(result))
     });
+    server.get("/auth/validate-doctor", (request: Request, response: Response) => {
+        return authenticationModule.validateDoctor(request.headers.authorization).then((result: boolean) => response.json(result))
+    })
 };
